# EM-algo

./: pyproject.toml
experimental_env/: dataset_generator.py  utils.py
mpest/: utils.py
mpest/em/: em.py
mpest/em/methods/: l_moments_method.py  likelihood_method.py
mpest/models/: weibull.py
tests/: utils.py
tests/tests_l_moments/: l_moments_utils.py  test_any_distributions_complex_l.py  test_any_distributions_simple_l.py  test_one_distribution_l.py  test_two_same_distributions_complex_l.py
